# mssql_ai_project_renew

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DESIGN.md  Dockerfile  EVAL_SPEC.md  IMPLEMENTATION_COMPLETION_CRITERIA.md  MANIFEST.md  Makefile  POLICY.md  PROJECT.md  README.md  ROLES.md  SCAFFOLD_STATUS.md  SKILLS.md  TOOLS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.codex/: config.toml
.codex/agents/: architect.toml  codex_runner_engineer.toml  langgraph_engineer.toml  mcp_engineer.toml  platform_engineer.toml  reviewer.toml  streamlit_engineer.toml
.streamlit/: config.toml
apps/streamlit/: app.py  ui_design.py
db/schema/: plf_db_agent_v2.sql  v001_platform_core.sql  v002_artifacts.sql  v003_codex_runs.sql  v004_approvals.sql  v005_evidence_bundles.sql
docs/reference/: development-tooling-context7-playwright.md  langsmith-development-tracing.md  legacy-artifact-taxonomy.md  legacy-do-not-copy.md  legacy-eval-lessons.md  (+4 more)
goals/: G00-legacy-reference-freeze.md  G01-greenfield-foundation-dual-codex-realm.md  G02-contract-schema-eval-baseline.md  G03-fastapi-platform-core.md  G04-streamlit-internal-ui-shell.md  G05-langgraph-chat-orchestrator-mvp.md  G06-mssql-mcp-metadata-gateway.md  G07-service-codex-runner-foundation.md  G08-runtime-skills-output-schemas-validators.md  G09-domain-feature-integration.md  G10-artifact-history-approval-ux-completion.md  G11-security-eval-observability-hardening.md  G12-end-to-end-acceptance-release.md
scripts/: codex-strict-goal-runner.py
styles/: design.css
tests/: conftest.py
(+189 files in other folders)
